chore: Auto-reformat code